# Tinery_voice

./: PLAN.md  README.md  dev_documentation.txt
services/calendar-bridge/: .gitignore  pyproject.toml
services/calendar-bridge/bridge/: __init__.py  agent.py  main.py  redact.py  session.py
services/calendar-bridge/scripts/: setup.py
voice-itinerary/: README.md  package.json  pnpm-lock.yaml  proxy.ts
voice-itinerary/app/: globals.css  layout.tsx  page.tsx
voice-itinerary/components/brand/: SettingsSheet.tsx  TopNav.tsx
voice-itinerary/components/calendar/: CalendarChip.tsx
voice-itinerary/components/itinerary/: ActivityImage.tsx  Announcer.tsx  Canvas.tsx  DayList.tsx  DayStrip.tsx  EditableTripCanvas.tsx  EmptyState.tsx  ShareBar.tsx  StayCard.tsx  TripHeader.tsx  TripView.tsx
voice-itinerary/components/voice/: OrbPlaceholder.tsx  TranscriptStream.tsx  VoiceOrb.tsx  VoiceSessionProvider.tsx  VoiceShell.tsx
voice-itinerary/lib/calendar/: mock.ts  types.ts
voice-itinerary/lib/data/: bali.ts  dubai.ts  flights.ts  goa.ts  index.ts  lisbon.ts  tokyo.ts  types.ts
voice-itinerary/lib/images/: gradient.ts
voice-itinerary/lib/realtime/: client.ts  config.ts  dateTable.ts  events.ts  prompt.ts  rateLimit.ts  scheduler.ts  tools.ts
voice-itinerary/lib/share/: ics.ts  store.ts
voice-itinerary/lib/store/: itinerary.ts  voice.ts
voice-itinerary/test/: data.test.ts  dateTable.test.ts  dispatch-weekday.test.ts  flights.test.ts  ics.test.ts  itinerary.test.ts  prompt.test.ts  region-lock.test.ts  scheduler.test.ts  share-store.test.ts
(+10 files in other folders)
