[project]
name = "calendar-bridge"
version = "0.1.0"
description = "browser-use bridge that reads Google Calendar for Tineri Voice"
requires-python = ">=3.11"
dependencies = [
    "browser-use>=0.1.40",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.1",
    "playwright>=1.48.0",
]

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bridge"]
